// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useIntersectionObserver > Default > should call observe 1`] = `
<DocumentFragment>
  <div>
    false
  </div>
</DocumentFragment>
`;

exports[`useIntersectionObserver > Default > should default visible with no intersection observer 1`] = `
<DocumentFragment>
  <div>
    true
  </div>
</DocumentFragment>
`;

exports[`useIntersectionObserver Default should call observe 1`] = `
<DocumentFragment>
  <div>
    false
  </div>
</DocumentFragment>
`;

exports[`useIntersectionObserver Default should default visible with no intersection observer 1`] = `
<DocumentFragment>
  <div>
    true
  </div>
</DocumentFragment>
`;
